--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -51,6 +51,7 @@ domain("forums.urbackup.org"),
 domain("forums.woot.com"),
 domain("meta.discourse.org"),
 domain("platform.github.community"),
+domain("ruby-forum.com"),
 domain("talk.commonmark.org"),
 domain("talk.makeict.org"),
 domain("twittercommunity.com"),
