--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -47,11 +47,11 @@ domain("forums.meteor.com"),
 domain("forums.puri.sm"),
 domain("forums.sonarr.tv"),
 domain("forums.spongepowered.org"),
+domain("docs.spongepowered.org"),
 domain("forums.swift.org"),
 domain("forums.urbackup.org"),
 domain("forums.woot.com"),
 domain("meta.discourse.org"),
-domain("platform.github.community"),
 domain("ruby-forum.com"),
 domain("talk.commonmark.org"),
 domain("talk.makeict.org"),
