Brighten similar post title. Fixes #22

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -230,7 +230,8 @@ regexp("https?://discourse\\.\\S*") {
     background: #555 !important;
     color: #ddd !important;
   }
-  .pihole-nav-link-container a:hover, .pihole-nav-link-container a:focus {
+  .pihole-nav-link-container a:hover, .pihole-nav-link-container a:focus,
+  .topic-title {
     color: #fff !important;
   }
   /* syntax theme */
