--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -357,7 +357,8 @@ regexp("https?://discourse\\.\\S*") {
   .nav-pills > li.active > a, .nav-pills > li > a.active,
   .timeline-container .btn-primary,
   .timeline-container .topic-timeline .timeline-handle,
-  div.menu-links-header a:hover {
+  div.menu-links-header a:hover, .menu-panel li a:hover, .menu-panel li a:focus,
+  .menu-panel li.heading a:hover, .menu-panel li.heading a:focus {
     background-color: var(--main-color) !important;
   }
   .nav-pills > li.active > a, .nav-pills > li > a.active,
