--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -19,6 +19,7 @@ domain("community.cloudflare.com"),
 domain("community.letsencrypt.org"),
 domain("community.home-assistant.io"),
 domain("community.thunkable.com"),
+domain("community.transifex.com"),
 domain("discuss.atom.io"),
 domain("discuss.codemirror.net"),
 domain("discuss.elastic.co"),
