--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -45,6 +45,7 @@ domain("forum.talksurf.com"),
 domain("forum.vuejs.org"),
 domain("forums.docker.com"),
 domain("forums.habitat.sh"),
+domain("forums.infamous.io"),
 domain("forums.meteor.com"),
 domain("forums.puri.sm"),
 domain("forums.sonarr.tv"),
