--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -131,6 +131,11 @@ regexp("https?://discourse\\.\\S*") {
     color: #ddd !important;
     border-color: #444 !important;
   }
+  pre {
+    white-space: pre-wrap;
+    word-break: break-all;
+    overflow-wrap: break-word;
+  }
   .list-controls .category-breadcrumb li.bullet > .badge-category {
     background: #333 !important;
     color: #ddd !important;
