Added Gitpod community

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -20,6 +20,7 @@ domain("community.letsencrypt.org"),
 domain("community.home-assistant.io"),
 domain("community.thunkable.com"),
 domain("community.transifex.com"),
+domain("community.gitpod.io"),
 domain("discuss.atom.io"),
 domain("discuss.codemirror.net"),
 domain("discuss.elastic.co"),
