--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -581,8 +581,7 @@ domain("users.rust-lang.org") {
     background: transparent !important;
   }
 }
-@-moz-document domain("community.home-assistant.io"),
-domain("discourse.pi-hole.net"),
+@-moz-document domain("discourse.pi-hole.net"),
 domain("discourse.huel.com"),
 domain("discuss.huel.com"),
 domain("discuss.ocaml.org"),
